chore(pkg): add npm start script to run local static server via npx http-server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Small browser-based chess engine and AI demo",
   "main": "index.htm",
   "scripts": {
-    "start": "" 
+    "start": "npx http-server -c-1 -p 8000"
   },
   "license": "MIT"
 }
